objects/PatientServicesEnrollee__c/PatientServicesEnrollee__c.object-meta.xml
<CustomObject>
    <label>Patient Services Enrollee</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Patient Services Enrollee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Services Enrollees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>