objects/PatientServicesEnrollee__c/fields/AttestationOfCompletion__c.field-meta.xml
<CustomField>
    <fullName>AttestationOfCompletion__c</fullName>
    <description>Attestation statement to ensure completion of form</description>
    <defaultValue>false</defaultValue>
    <label>Attestation of Completion</label>
    <type>Checkbox</type>
</CustomField>