objects/PatientServicesEnrollee__c/fields/BestTimeToReachOut__c.field-meta.xml
<CustomField>
    <fullName>BestTimeToReachOut__c</fullName>
    <description>Time of day that the Patient prefers to be contact by Patient Services</description>
    <defaultValue>&apos;Morning&apos;</defaultValue>
    <label>Best Time for Outreach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>