objects/PatientServicesEnrollee__c/fields/CaregiverAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>CaregiverAddressLine1__c</fullName>
    <description>Address Line 1 of Caregiver Postal Address</description>
    <label>Caregiver Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>