objects/PatientServicesEnrollee__c/fields/CaregiverAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>CaregiverAddressLine2__c</fullName>
    <description>Address Line 2 of Caregiver Postal Address</description>
    <label>Caregiver Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>