objects/PatientServicesEnrollee__c/fields/CaregiverCity__c.field-meta.xml
<CustomField>
    <fullName>CaregiverCity__c</fullName>
    <description>City of Caregiver Postal Address</description>
    <label>Caregiver City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>