objects/PatientServicesEnrollee__c/fields/CaregiverCountry__c.field-meta.xml
<CustomField>
    <fullName>CaregiverCountry__c</fullName>
    <description>Country of Caregiver Postal Address</description>
    <label>Caregiver Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Countries</valueSetName>
    </valueSet>
</CustomField>