objects/PatientServicesEnrollee__c/fields/CaregiverEmail__c.field-meta.xml
<CustomField>
    <fullName>CaregiverEmail__c</fullName>
    <description>Caregiver's Email Address</description>
    <label>Caregiver Email</label>
    <type>Email</type>
</CustomField>