objects/PatientServicesEnrollee__c/fields/CaregiverFirstName__c.field-meta.xml
<CustomField>
    <fullName>CaregiverFirstName__c</fullName>
    <description>Caregiver's First Name</description>
    <label>Caregiver First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>