objects/PatientServicesEnrollee__c/fields/CaregiverLastName__c.field-meta.xml
<CustomField>
    <fullName>CaregiverLastName__c</fullName>
    <description>Caregiver's Last Name</description>
    <label>Caregiver Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>