objects/PatientServicesEnrollee__c/fields/CaregiverMiddleName__c.field-meta.xml
<CustomField>
    <fullName>CaregiverMiddleName__c</fullName>
    <description>Caregiver's Middle Name</description>
    <label>Caregiver Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>