objects/PatientServicesEnrollee__c/fields/CaregiverPhone__c.field-meta.xml
<CustomField>
    <fullName>CaregiverPhone__c</fullName>
    <description>Caregiver's Contact Number</description>
    <label>Caregiver Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>