objects/PatientServicesEnrollee__c/fields/CaregiverPhoneType__c.field-meta.xml
<CustomField>
    <fullName>CaregiverPhoneType__c</fullName>
    <description>Caregiver's Contact Number Type</description>
    <label>Caregiver Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
                <default>true</default>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>