objects/PatientServicesEnrollee__c/fields/CaregiverState__c.field-meta.xml
<CustomField>
    <fullName>CaregiverState__c</fullName>
    <description>State of Caregiver Postal Address</description>
    <label>Caregiver State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>