objects/PatientServicesEnrollee__c/fields/CaregiverZip__c.field-meta.xml
<CustomField>
    <fullName>CaregiverZip__c</fullName>
    <description>Zip of Caregiver Postal Address</description>
    <label>Caregiver Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>