objects/PatientServicesEnrollee__c/fields/CarePlan__c.field-meta.xml
<CustomField>
    <fullName>CarePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Care Plan the patient is enrolled into</description>
    <label>Care Plan</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>CarePlan</value>
        </filterItems>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>CareGap</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Patient Services Enrollees</relationshipLabel>
    <relationshipName>Patient_Services_Enrollees</relationshipName>
    <type>Lookup</type>
</CustomField>