objects/PatientServicesEnrollee__c/fields/ConfirmedInfusionDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedInfusionDate__c</fullName>
    <description>The field to capture the confirmed infusion date. The value is populated from the Infusion Date field of Order Object.</description>
    <label>Confirmed Infusion Date</label>
    <type>Date</type>
</CustomField>