objects/PatientServicesEnrollee__c/fields/DateEligibilityCheckPerformed__c.field-meta.xml
<CustomField>
    <fullName>DateEligibilityCheckPerformed__c</fullName>
    <description>Date when the eligibility check was performed by the PAS Agent</description>
    <label>Date Eligibility Check Performed</label>
    <type>Date</type>
</CustomField>