objects/PatientServicesEnrollee__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <description>Date of Birth of the Patient</description>
    <formula>Patient__r.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>