objects/PatientServicesEnrollee__c/fields/DateOfEnrollmentFormReceipt__c.field-meta.xml
<CustomField>
    <fullName>DateOfEnrollmentFormReceipt__c</fullName>
    <description>Date when the enrollment form is received </description>
    <label>Date of Enrollment Form Receipt</label>
    <type>Date</type>
</CustomField>