objects/PatientServicesEnrollee__c/fields/DateOfEnrollmentInService__c.field-meta.xml
<CustomField>
    <fullName>DateOfEnrollmentInService__c</fullName>
    <description>Date of enrollment of the Patient in the service</description>
    <label>Date of enrollment in Service</label>
    <type>Date</type>
</CustomField>