objects/PatientServicesEnrollee__c/fields/DateofRequest__c.field-meta.xml
<CustomField>
    <fullName>DateofRequest__c</fullName>
    <description>Date when the Patient Services Enrollee record was created</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Request</label>
    <type>Date</type>
</CustomField>