objects/PatientServicesEnrollee__c/fields/DateOfSignature__c.field-meta.xml
<CustomField>
    <fullName>DateOfSignature__c</fullName>
    <description>Date of Signature on the form</description>
    <label>Date of Signature</label>
    <type>Date</type>
</CustomField>