objects/PatientServicesEnrollee__c/fields/DistanceMileage__c.field-meta.xml
<CustomField>
    <fullName>DistanceMileage__c</fullName>
    <description>Distance between the Patient's address and Treatment Site address in miles</description>
    <label>Distance - Mileage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>