objects/PatientServicesEnrollee__c/fields/DistanceTime__c.field-meta.xml
<CustomField>
    <fullName>DistanceTime__c</fullName>
    <description>Distance between the Patient's address and Treatment Site address in hours and minutes</description>
    <label>Distance - Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>