objects/PatientServicesEnrollee__c/fields/FormSignedbyPatient__c.field-meta.xml
<CustomField>
    <fullName>FormSignedbyPatient__c</fullName>
    <description>Captures confirmation of Patient signature on the form</description>
    <defaultValue>false</defaultValue>
    <label>Form Signed by Patient</label>
    <type>Checkbox</type>
</CustomField>