objects/PatientServicesEnrollee__c/fields/InfusionDepletionDate__c.field-meta.xml
<CustomField>
    <fullName>InfusionDepletionDate__c</fullName>
    <description>Date of Infusion or Lympho-depletion</description>
    <label>Planned Infusion Date</label>
    <type>Date</type>
</CustomField>