objects/PatientServicesEnrollee__c/fields/LodgingEligibility__c.field-meta.xml
<CustomField>
    <fullName>LodgingEligibility__c</fullName>
    <description>Eligibility based on lodging</description>
    <defaultValue>&apos;Eligibility check not performed&apos;</defaultValue>
    <label>Lodging Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligibility check not performed</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not-eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>