objects/PatientServicesEnrollee__c/fields/LodgingSupport__c.field-meta.xml
<CustomField>
    <fullName>LodgingSupport__c</fullName>
    <description>Lodging support provided by the site</description>
    <defaultValue>&apos;No&apos;</defaultValue>
    <label>Lodging Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - but no availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>