objects/PatientServicesEnrollee__c/fields/NonEmergencyMedicalTravel__c.field-meta.xml
<CustomField>
    <fullName>NonEmergencyMedicalTravel__c</fullName>
    <description>Confirmation whether patient is eligible for non-emergency medical travel</description>
    <defaultValue>&apos;No&apos;</defaultValue>
    <label>Non-emergency Medical Travel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>