objects/PatientServicesEnrollee__c/fields/OptInPreference__c.field-meta.xml
<CustomField>
    <fullName>OptInPreference__c</fullName>
    <description>Preference of communication method opted into</description>
    <defaultValue>&apos;Not Specified&apos;</defaultValue>
    <label>Opt in Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>