objects/PatientServicesEnrollee__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <description>Patient record of the patient requesting Patient Services</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Services Enrollees</relationshipLabel>
    <relationshipName>Patient_Services_Enrollees</relationshipName>
    <type>Lookup</type>
</CustomField>