objects/PatientServicesEnrollee__c/fields/PatientAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>PatientAddressLine1__c</fullName>
    <description>Address Line 1 of Patient Postal Address</description>
    <label>Patient Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>