objects/PatientServicesEnrollee__c/fields/PatientAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>PatientAddressLine2__c</fullName>
    <description>Address Line 2 of Patient Postal Address</description>
    <label>Patient Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>