objects/PatientServicesEnrollee__c/fields/PatientCity__c.field-meta.xml
<CustomField>
    <fullName>PatientCity__c</fullName>
    <description>City of Patient Postal Address</description>
    <label>Patient City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>