objects/PatientServicesEnrollee__c/fields/PatientCountry__c.field-meta.xml
<CustomField>
    <fullName>PatientCountry__c</fullName>
    <description>Country of Patient Postal Address</description>
    <label>Patient Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Countries</valueSetName>
    </valueSet>
</CustomField>