objects/PatientServicesEnrollee__c/fields/PatientEmail__c.field-meta.xml
<CustomField>
    <fullName>PatientEmail__c</fullName>
    <description>Contact email of Patient</description>
    <label>Patient Email</label>
    <type>Email</type>
</CustomField>