objects/PatientServicesEnrollee__c/fields/PatientEnrolledInTravelVendorService__c.field-meta.xml
<CustomField>
    <fullName>PatientEnrolledInTravelVendorService__c</fullName>
    <description>Confirmation that the Patient is enrolled in the Travel Vendor servic</description>
    <defaultValue>false</defaultValue>
    <label>Patient Enrolled in Travel VendorService</label>
    <type>Checkbox</type>
</CustomField>