objects/PatientServicesEnrollee__c/fields/PatientPhone__c.field-meta.xml
<CustomField>
    <fullName>PatientPhone__c</fullName>
    <description>Contact number of Patient</description>
    <label>Patient Phone</label>
    <type>Phone</type>
</CustomField>