objects/PatientServicesEnrollee__c/fields/PatientPhoneType__c.field-meta.xml
<CustomField>
    <fullName>PatientPhoneType__c</fullName>
    <description>Contact number type of Patient</description>
    <defaultValue>&apos;Mobile&apos;</defaultValue>
    <label>Patient Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>