objects/PatientServicesEnrollee__c/fields/PatientPreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PatientPreferredLanguage__c</fullName>
    <description>Preferred language of communication</description>
    <defaultValue>&apos;English&apos;</defaultValue>
    <label>Patient Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>