objects/PatientServicesEnrollee__c/fields/PatientServices__c.field-meta.xml
<CustomField>
    <fullName>PatientServices__c</fullName>
    <description>List of Patient Services available</description>
    <defaultValue>&apos;Travel (Ground and Air transport) Services​&apos;</defaultValue>
    <label>Patient Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel (Ground and Air transport) Services​</fullName>
            </value>
            <value>
                <fullName>Accommodation Services​</fullName>
            </value>
            <value>
                <fullName>Meals Services</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>