objects/PatientServicesEnrollee__c/fields/PatientServicesStatus__c.field-meta.xml
<CustomField>
    <fullName>PatientServicesStatus__c</fullName>
    <description>Status of the Patient Services Record</description>
    <defaultValue>&apos;New Patient Services request&apos;</defaultValue>
    <label>Patient Services Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Patient Services Request</fullName>
                <default>true</default>
                <label>New Patient Services Request</label>
            </value>
            <value>
                <fullName>Request to Enroll Confirmed</fullName>
            </value>
            <value>
                <fullName>Patient Enrollment Form Received</fullName>
            </value>
            <value>
                <fullName>Missing Information in Form</fullName>
            </value>
            <value>
                <fullName>Processing Eligibility</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Enrolled in Service</fullName>
            </value>
            <value>
                <fullName>Opted out of Patient Services</fullName>
            </value>
            <value>
                <fullName>Request for Information Only</fullName>
            </value>
            <value>
                <fullName>Patient Services Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>