objects/PatientServicesEnrollee__c/fields/PatientState__c.field-meta.xml
<CustomField>
    <fullName>PatientState__c</fullName>
    <description>State of Patient Postal Address</description>
    <label>Patient State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>