objects/PatientServicesEnrollee__c/fields/PatientZip__c.field-meta.xml
<CustomField>
    <fullName>PatientZip__c</fullName>
    <description>Zip of of Patient Postal Address</description>
    <label>Patient Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>