objects/PatientServicesEnrollee__c/fields/PrimaryContactforTravelLogistics__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactforTravelLogistics__c</fullName>
    <description>Primary contact that the Patient specifies for communications regarding Patient Services</description>
    <defaultValue>&apos;Self&apos;</defaultValue>
    <label>Primary Contact for Travel Logistics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>