objects/PatientServicesEnrollee__c/fields/SignedforConsent__c.field-meta.xml
<CustomField>
    <fullName>SignedforConsent__c</fullName>
    <description>Captured confirmation of Patient consent  to enroll in Patient Services on the form</description>
    <defaultValue>false</defaultValue>
    <label>Signed for Consent</label>
    <type>Checkbox</type>
</CustomField>