objects/PatientServicesEnrollee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>PatientServicesStatus__c</columns>
    <columns>CarePlan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Patient Services Enrollees</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>