objects/PatientServicesEnrollee__c/listViews/MyPatientServicesEnrolleesView.listView-meta.xml
<ListView>
    <fullName>MyPatientServicesEnrolleesView</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>PatientServicesStatus__c</columns>
    <columns>CarePlan__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Patient Services Enrollees</label>
</ListView>