objects/PatientServicesEnrollee__c/listViews/PatientServicesEnrolleeQueue_PatientServicesEnrollee.listView-meta.xml
<ListView>
    <fullName>PatientServicesEnrolleeQueue_PatientServicesEnrollee</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>PatientServicesStatus__c</columns>
    <columns>CarePlan__c</columns>
    <filterScope>Queue</filterScope>
    <label>Patient Services Enrollee Queue</label>
    <queue>PatientServicesEnrolleeQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>